# ERC-8040-ESG-TOKENIZATION-PROTOCOL

./: CHECKLIST_AUDITORES_EXTERNOS.md  CHECKLIST_COMUNIDADE_TECNICA.md  CHECKLIST_MARKETING_DIVULGACAO.md  CHECKLIST_POST_MERGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS_RECOGNITION.md  Cargo.toml  HISTORICAL-MILESTONE.md  LICENSE  PAIR-EXTRAORDINAIRE-ACHIEVEMENT.md  README.md  security_audit.md
src/: lib.rs
